Refactor debugger test base and update breakpoint tests
Refactored DebuggerTestBase to use per-class test instance lifecycle and external debuggee setup/teardown with JDWP connection management. Updated BreakpointManagerTest to use new line numbers for breakpoints. Improved DebuggerException message handling for null error codes. Marked DebuggerIntegrationTest as @Isolated for exclusive JDWP access. Fixed VariableExtractorTest to use Collections.singletonMap for null values in mocks.